# numpy-ts

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  RELEASE.md  TODO  TODO-1.0.md  WASM.md  biome.json  build.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tsconfig.json  vitest.config.ts
.github/: dependabot.yml  labeler.yml
bench/: .gitignore  README.md  package-lock.json  package.json  run-parallel.ts  run.ts  tsconfig.json
benchmarks/: README.md  rng-compare.ts
docs/: API-REFERENCE.md  COMPLEX_SUPPORT.md  FEATURE-GAPS.md  MASKED-ARRAY-SKETCH.md  changelog.mdx  docs-api-audit.json  docs.json  index.mdx  modular-imports.mdx  style.css
docs_internal/: API-REFERENCE.md  ASYNC-DESIGN.md  BENCHMARKING.md  FEATURES.md  TESTING-GUIDE.md  slice-changes-0.13.x.md
old_docs/: API-REFERENCE.md  ARCHITECTURE.md  TESTING-GUIDE.md
scripts/: README.md  audit-numpy-api.py  audit-numpyts-api.ts  build-wasm.ts  bundle-size-badge.ts  compare-api-coverage.py  compare-docs-api-coverage.py  dtype-coverage-report.ts  fastest-functions.ts  generate-bench-docs.py  generate-dtype-promotion.ts  generate-full.ts  generate-overview-charts.py  ndarray-methods.ts  slowest-functions.ts  wasm-size.ts  zig-dead-code.ts  zig-fn-coverage.ts
src/: core.ts  index.ts  node.ts  standalone.ts
tests/: setup-version.ts
wasm-bench/rust/: Cargo.toml  build.sh
wasm-bench/rust/.cargo/: config.toml
wasm-bench/rust/src/: arrayops.rs  binary.rs  convolve.rs  fft.rs  lib.rs  linalg.rs  reduction.rs  sort.rs  unary.rs
(+1107 files in other folders)
