[package]
name = "matmul-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
kern-matmul = []
kern-reduction = []
kern-unary = ["dep:libm"]
kern-binary = []
kern-sort = []

[dependencies]
libm = { version = "0.2", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
